objects/metazoa3__snapshot_sprint__c.object
<CustomObject>
    <description>This is an administrative object for Snapshot Change and Release Automation. This object records the information associated with a developer sprint or administrative project.</description>
    <fields>
        <fullName>metazoa3__actual_finish__c</fullName>
        <label>Actual Finish</label>
        <summarizedField>metazoa3__snapshot_story__c.metazoa3__finish_date__c</summarizedField>
        <summaryForeignKey>metazoa3__snapshot_story__c.metazoa3__snapshot_sprint__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>metazoa3__actual_start__c</fullName>
        <label>Actual Start</label>
        <summarizedField>metazoa3__snapshot_story__c.metazoa3__start_date__c</summarizedField>
        <summaryForeignKey>metazoa3__snapshot_story__c.metazoa3__snapshot_sprint__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>metazoa3__actual_work__c</fullName>
        <label>Actual Work</label>
        <summarizedField>metazoa3__snapshot_story__c.metazoa3__actual_work__c</summarizedField>
        <summaryForeignKey>metazoa3__snapshot_story__c.metazoa3__snapshot_sprint__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>metazoa3__archive_flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archive Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>metazoa3__broadcast_deployments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Broadcast Deployments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>metazoa3__broadcast_sprint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Broadcast Sprint Changes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>metazoa3__broadcast_stage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Broadcast Stage Changes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>metazoa3__broadcast_story__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Broadcast Story Changes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>metazoa3__burndown_graph__c</fullName>
        <label>Burndown Graph</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>metazoa3__detailed_comments__c</fullName>
        <label>Detailed Comments</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>metazoa3__extra_field_one__c</fullName>
        <label>Extra Field One</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__extra_field_two__c</fullName>
        <label>Extra Field Two</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__extra_flag_one__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extra Flag One</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>metazoa3__extra_flag_two__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extra Flag Two</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>metazoa3__finish_date__c</fullName>
        <label>Finish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>metazoa3__master_branch__c</fullName>
        <label>Master Branch</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__object_type__c</fullName>
        <label>Object Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__partial_deployments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partial Deployments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>metazoa3__percent_complete__c</fullName>
        <formula>metazoa3__actual_work__c / metazoa3__planned_work__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>metazoa3__planned_work__c</fullName>
        <label>Planned Work</label>
        <summarizedField>metazoa3__snapshot_story__c.metazoa3__planned_work__c</summarizedField>
        <summaryForeignKey>metazoa3__snapshot_story__c.metazoa3__snapshot_sprint__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>metazoa3__sprint_owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sprint Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Snapshot_Sprints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>metazoa3__start_date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>metazoa3__total_deployments__c</fullName>
        <label>Total Deployments</label>
        <summaryForeignKey>metazoa3__snapshot_history__c.metazoa3__snapshot_sprint__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>metazoa3__total_stories__c</fullName>
        <label>Total Stories</label>
        <summaryForeignKey>metazoa3__snapshot_story__c.metazoa3__snapshot_sprint__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>metazoa3__vacation_days__c</fullName>
        <label>Vacation Days</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>metazoa3__work_days__c</fullName>
        <label>Work Days</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Snapshot Sprint</label>
    <listViews>
        <fullName>metazoa3__Active_Sprints</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>metazoa3__percent_complete__c</field>
            <operation>lessThan</operation>
            <value>100</value>
        </filters>
        <label>Active Sprints</label>
    </listViews>
    <listViews>
        <fullName>metazoa3__All</fullName>
        <columns>NAME</columns>
        <columns>metazoa3__sprint_owner__c</columns>
        <columns>metazoa3__planned_work__c</columns>
        <columns>metazoa3__actual_work__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>metazoa3__Completed_Sprints</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>metazoa3__percent_complete__c</field>
            <operation>equals</operation>
            <value>100</value>
        </filters>
        <label>Completed Sprints</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Snapshot Sprints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>